# fn-usage

./: BLOG.md  Cargo.toml  README.md  config.json  plot.py
code-graph/: Cargo.toml
code-graph/src/: main.rs
fn-usage/: Cargo.toml
fn-usage/src/: lib.rs  main.rs
fn-usage/tests/rust_analyzer/: main.rs
fn-usage/tests/rust_analyzer/sample_rust_project/: Cargo.toml
fn-usage/tests/rust_analyzer/sample_rust_project/src/: main.rs  other_file.rs
fn-usage/tests/rust_analyzer/snapshots/: rust_analyzer___test_rust_analyzer-2.snap  rust_analyzer___test_rust_analyzer-3.snap  rust_analyzer___test_rust_analyzer-3.snap.new  rust_analyzer___test_rust_analyzer-4.snap  rust_analyzer___test_rust_analyzer-4.snap.new  rust_analyzer___test_rust_analyzer.snap
jsonrpc-types/: Cargo.toml
jsonrpc-types/src/: lib.rs  request.rs
jsonrpc/src/: client.rs  types.rs
jsonrpc/tests/: main.rs  test_client.rs  test_types.rs
jsonrpc/tests/snapshots/: main__client-5.snap  main__server-3.snap  main__server-4.snap  main__server-6.snap  main__server.snap
lsp-client/: Cargo.toml
lsp-client/src/: child_stdio_channel.rs  client.rs  jsonrpc.rs  lib.rs  stdio.rs
lsp-client/src/clients/: stdio.rs
lsp-client/src/proxies/: stdio.rs
lsp-client/src/snapshots/: lsp_client__jsonrpc__tests__request_empty_params.snap  lsp_client__jsonrpc__tests__request_serialization-3.snap
lsp-client/tests/rust_analyzer/: main.rs
src/: client.rs  facade.rs  graph.rs  jsonrpc.rs  lib.rs  lsp.rs  lsp_facade.rs  main.rs  stdio.rs
tests/rust_analyzer/: main.rs
(+1 files in other folders)
