[package]
name = "lsp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "code-graph"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
indicatif = "0.17.11"
lsp-types = "0.97.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.42.1", features = ["json"] }
