[package]
name = "fn-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-client = { path = "../lsp-client" }
anyhow = "1.0.69"
jsonrpc = { path = "../jsonrpc" }
lsp-types = "0.94.0"
tokio = { version = "1.26.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
    "process",
] }
glob = "0.3.1"
petgraph = "0.6.3"

[dev-dependencies]
insta = { version = "1.28.0", features = ["json"] }
